2010-08-06  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.1.15

2010-08-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15282: It is impossible to set links to files any more with the link wizard

2010-08-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15311: t3lib_div::sanitizeLocalUrl() leads to fatal error on PHP4 systems
	* Fixed bug #15265: InstallTool-login not possible after Update to 4.4.1 due to session_start() in extensions (thanks to Ernesto Baschny and Helmut Hummel)

2010-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15289: Element-Browser page tree has HSC'ed <span> elements

2010-07-30  Oliver Hader  <oliver@typo3.org>

	* Reverted fix for bug #15260
	* Fixed bug #15263: Clearing caches in backend only displays empty frame

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15260: Use of undefined method t3lib_div::sanitizeLocalUrl()

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.1.14

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14978: XSS in file tree (thanks to Georg Ringer)
	* Fixed bug #13292: TYPO3 error message reveals path to web root (thanks to Xavier Perseguers)
	* Fixed bug #11618: XSS vulnerability in install tool / BE login (thanks to Georg Ringer)
	* Fixed bug #13961: XSS in impexp (thanks to Georg Ringer)
	* Fixed bug #13960: XSS in sys_action (thanks to Georg Ringer)
	* Fixed bug #13958: XSS in BE Log (thanks to Georg Ringer)
	* Fixed bug #14317: XSS in Extension Manager (thanks to Georg Ringer)
	* Fixed bug #14215: XSS in beuser (thanks to Georg Ringer)
	* Fixed bug #12458: Session fixation possibility in new sesion machanism of the install tool (thanks to Benjamin Mack, Helmut Hummel and Ernesto Baschny)
	* Fixed bug #12736: XSS in setup module (thanks to Georg Ringer)
	* Fixed bug #13989: Mitigate PHP's RNG vulnerability (thanks to Marcus Krause and Helmut Hummel)
	* Fixed bug #12739: XSS in shortcuts (thanks to Francois Suter and Georg Ringer)